# rs-authorizer

./: Cargo.toml  Makefile  README.md
examples/: aserto-info.rs  topaz-info.rs
src/: aserto.authorizer.v2.api.rs  aserto.authorizer.v2.api.serde.rs  aserto.authorizer.v2.rs  aserto.authorizer.v2.serde.rs  aserto.authorizer.v2.tonic.rs  lib.rs
